--- a/SMU_Vizz_Portfolio/Web/templates/index.html
+++ b/SMU_Vizz_Portfolio/Web/templates/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - Home</title>
-        <link rel="stylesheet" href="/visuals/style.css">
-        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
+        <link rel="stylesheet" href="/Web/visuals/style.css">
+        <link rel="icon" type="image/x-icon" href="/Web/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
@@ -27,7 +27,7 @@
             <li id="nav-next"><a id = "ul-a" href="parallax.html">Parallax</a></li>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
-        <h1 id="h1welcome">Welcome!</h1><img id="sfpic" src="/Resources/cropped.png">
+        <h1 id="h1welcome">Welcome!</h1><img id="sfpic" src="/Web/Resources/cropped.png">
         <p style="text-align: center;">This webpage was created to showcase the many tools that I have learned over the years relating to data science. Please feel free to browse around and enjoy the webpage! Thank you for visiting!</p>
         <hr id="hr1">
         
