--- a/SMU_Vizz_Portfolio/Web/templates/parallax.html
+++ b/SMU_Vizz_Portfolio/Web/templates/parallax.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Scott Frazier - parallax</title>
-        <script src="/js/parallax.js"></script>
-        <link rel="stylesheet" href="/visuals/parallax.css">
-        <link rel="icon" type="image/x-icon" href="/Resources/favicon.ico">
+        <script src="/Web/js/parallax.js"></script>
+        <link rel="stylesheet" href="/Web/visuals/parallax.css">
+        <link rel="icon" type="image/x-icon" href="/Web/Resources/favicon.ico">
     </head>
     <body>
         <ul id="ul-nav">
@@ -31,18 +31,18 @@
         <div class="mouse_move">
             <img
               id="img1"
-              src="/Resources/arthur.png"
+              src="/Web/Resources/arthur.png"
               class="mouse"
               value="1"/>
             <img
               id="img2"
-              src="/Resources/oliver.png"
+              src="/Web/Resources/oliver.png"
               class="mouse"
               value="-4"/>
             
             <img
               id="img3"
-              src="/Resources/ruby.png"
+              src="/Web/Resources/ruby.png"
               class="mouse"
               value="-2"/>
           </div>
